--- a/resources/scss/blocks/filter.scss
+++ b/resources/scss/blocks/filter.scss
@@ -3,12 +3,21 @@
 }
 
 .filter-label {
-    color: #2C3244;
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 15.96px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &_arrow{
+        transition: .3s ease;
+
+        &.active{
+            transform: rotate(-180deg);
+        }
+    }
+
 }
 
 .select-item {
