--- a/resources/scss/blocks/pagger.scss
+++ b/resources/scss/blocks/pagger.scss
@@ -3,8 +3,12 @@
 .pagger {
     ul {
         display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
         list-style-type: none;
         padding-left: 0;
+        margin-top: 50px;
         li {
             display: flex;
             align-items: center;
@@ -12,16 +16,21 @@
             font-family: variables.$FontFamily;
             font-size: 16px;
             font-style: normal;
-            font-weight: 400;
+            font-weight: 500;
             line-height: normal;
-            width: 40px;
-            height: 40px;
-            border-radius: 34px;
-            margin-bottom: 0;
+            width: 48px;
+            height: 48px;
+            border-radius: 1px;
+            border: 1px solid #D6D6D6;
+            margin-bottom: 12px;
+            margin-right: 12px;
         }
-
+        li:first-child,
+        li:last-child{
+            border: none;
+        }
         li.active {
-            background-color: #1C2864;
+            background-color: variables.$MainColorText;
             color: #FFF;
         }
     }
