--- a/resources/scss/blocks/product.scss
+++ b/resources/scss/blocks/product.scss
@@ -12,6 +12,7 @@
 }
 
 .product-heading {
+    max-width: 1024px;
 }
 
 .product-content {
@@ -74,7 +75,7 @@
             }
         }
 
-        .swiper-slide-active {
+        .swiper-slide-thumb-active {
             border: 1px solid variables.$AdditionalColorText;
         }
     }
