--- a/resources/scss/blocks/product.scss
+++ b/resources/scss/blocks/product.scss
@@ -21,9 +21,13 @@
 
     &__left {
         position: relative;
-        flex: 0 0 550px;
-        width: 550px;
+        //flex: 0 0 550px;
+        //width: 550px;
         margin-right: 50px;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 25px;
+
     }
 
     &__right {
@@ -37,33 +41,45 @@
 }
 
 .product-slider {
+
     &_main {
         margin-bottom: 16px;
+        width: 761px;
+        height: 626px;
+        border: 1px solid #EBEBEB;
 
         .product-slide {
             position: relative;
             display: block;
-            height: 550px;
 
             img {
-                position: absolute;
-                top: 0;
-                left: 0;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+            }
+
+            &_btns{
+                position: absolute;
+                top: 30px;
+                right: 30px;
+                z-index: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
             }
         }
     }
 
     &_navigate {
-        width: 460px;
+        width: 100%;
 
         .product-slide {
             position: relative;
             display: block;
-            height: 97px;
+            //height: 107px !important;
+            overflow: hidden;
             cursor: pointer;
+            border: 1px solid #EBEBEB;
 
             img {
                 position: absolute;
@@ -78,19 +94,48 @@
         .swiper-slide-thumb-active {
             border: 1px solid variables.$AdditionalColorText;
         }
+
+
     }
 }
 
 .product-slider__container {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    width: 107px;
+    height: 626px;
+    flex-shrink: 0;
+    position: relative;
+
+    .swiper-button-disabled{
+        display: none;
+    }
 }
 
 .product-next,
 .product-prev {
     cursor: pointer;
+    width: 52px;
+    height: 52px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 12.5px 0px #00000029;
+    background-color: #FFFFFF;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
 }
-
+.product-next{
+    bottom: -26px;
+}
+.product-prev{
+    top: -26px;
+}
 .product-price {
     display: inline-flex;
     justify-content: space-between;
